# WP5-2

./: CMakeLists.txt  FilterForTwoDigitPositive.cpp  FilterForTwoDigitPositive.h  FilterGeneric.cpp  FilterGeneric.h  FilterNonPositive.cpp  FilterNonPositive.h  FilterOdd.cpp  FilterOdd.h  MapAbsoluteValue.cpp  MapAbsoluteValue.h  MapGeneric.cpp  MapGeneric.h  MapSquare.cpp  MapSquare.h  MapTriple.cpp  MapTriple.h  ReduceGCD.cpp  ReduceGCD.h  ReduceGeneric.cpp  ReduceGeneric.h  ReduceMinimum.cpp  ReduceMinimum.h
